--- a/css/site.css
+++ b/css/site.css
@@ -1,3 +1,13 @@
 .navbar-header {
     padding-top: 10px;
 }
+
+pre {
+    outline: 1px solid #ccc; 
+    padding: 5px; margin: 5px; 
+}
+.string { color: green; }
+.number { color: darkorange; }
+.boolean { color: blue; }
+.null { color: magenta; }
+.key { color: red; }
