--- a/css/site.css
+++ b/css/site.css
@@ -6,8 +6,8 @@ pre {
     outline: 1px solid #ccc; 
     padding: 5px; margin: 5px; 
 }
-.string { color: green; }
-.number { color: darkorange; }
-.boolean { color: blue; }
-.null { color: magenta; }
-.key { color: red; }
+.string { color: #2313A4; }
+.number { color: #2313A4; }
+.boolean { color:#5F59F4; }
+.null { color: #000000; }
+.key { color: #3E8495; }
